added the auth jwt

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URL="mongodb+srv://ikramghimire:bikram1309@cluster0.algtwta.mongodb.net/?retryWrites=true&w=majority"
+SECRET_KEY="secret key"
